--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="card-content">
                     <h2 class="card-title">𝐍𝐨𝐝𝐞 𝐕𝐢𝐝𝐞𝐨 𝐏𝐫𝐨</h2>
                     <p class="card-description">𝐕𝐢𝐝𝐞𝐨 𝐄𝐝𝐢𝐭𝐨𝐫𝐥𝐚𝐫 𝐔𝐜𝐡𝐮𝐧 𝐌𝐚𝐱𝐬𝐮𝐬 𝐈𝐥𝐨𝐯𝐚. 𝐕𝐢𝐝𝐞𝐨 𝐅𝐨𝐫𝐦𝐚𝐭 𝟒𝐊 𝐅𝐇𝐃, 𝟏𝟐𝟎 𝐅𝐏𝐒. 𝐈𝐥𝐨𝐯𝐚 𝐀𝐧𝐝𝐫𝐨𝐢𝐝 𝐕𝐞𝐫𝐬𝐢𝐲𝐚 𝐔𝐜𝐡𝐮𝐧.</p>
-                    <a href="download/Node Video by Colin.apk" class="download-btn"><i class="fas fa-download"></i> Yuklab olish</a>
+                    <a href="https://download1638.mediafire.com/mk1ih7o8lotgYoC5UzNCB2ik8gDuM4SGBfZjDIuYxk3mlfxjNiDLWcD3VcQQz15loSPno6HZUCBNxK0rqWIbSFZfjoMupfVxRfA2WtqsmgxdYbYKJLxARr_6NvEzgwejEHhE29KpB6subV4-bcpTlbEl9qxoujNmz7IFPBmU/kv81aiovt5y4bcw/Node+Video+by+Colin.apk" class="download-btn"><i class="fas fa-download"></i> Yuklab olish</a>
                 </div>
             </div>
 
