--- a/index.html
+++ b/index.html
@@ -2,16 +2,36 @@
 <html lang="kr">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>𝐂𝐨𝐥𝐢𝐧𝐔𝐳𝐛™</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="img/logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>𝐂𝐨𝐥𝐢𝐧𝐔𝐳𝐛 𝐖𝐞𝐛 𝐃𝐚𝐬𝐭𝐮𝐫𝐢𝐠𝐚 𝐇𝐮𝐬𝐡 𝐊𝐞𝐥𝐢𝐛𝐬𝐢𝐳.</h1>
+      <header class="header">
+        <a href="index.html" class="logo">𝐂𝐨𝐥𝐢𝐧𝐔𝐳𝐛™</a>
+
+        <input type="checkbox" id="check">
+        <label for="check" class="icon">
+          <i class='bx bx-menu-alt-right' id="menu-icon"></i>
+          <i class='bx bxl-xing' id="close-icon"></i>
+        </label>
+
+        <nav class="navbar">
+          <a href="index.html" style="--i:0;">𝐆𝐚𝐦𝐞𝐬</a>
+          <a href="index.html" style="--i:1;">𝐓𝐞𝐚𝐦</a>
+          <a href="index.html" style="--i:4;">𝐋𝐨𝐠𝐢𝐧</a>
+
+        </nav>
+
+      </header>
+
+        <header class="header-text">
+            <h1>𝐖𝐞𝐛 𝐃𝐚𝐬𝐭𝐮𝐫𝐠𝐚 𝐇𝐮𝐬𝐡 𝐊𝐞𝐥𝐢𝐛𝐬𝐢𝐳.</h1>
             <p class="subtitle">𝐊𝐞𝐫𝐚𝐤𝐥𝐢 𝐏𝐨𝐜𝐤𝐞𝐭𝐥𝐚𝐫, 𝐎❜𝐲𝐢𝐧 𝐯𝐚 𝐃𝐚𝐬𝐭𝐮𝐫 𝐔𝐜𝐡𝐮𝐧 𝐈𝐥𝐨𝐯𝐚𝐥𝐚𝐫.</p>
         </header>
 
@@ -24,7 +44,7 @@
                 <div class="card-content">
                     <h2 class="card-title">𝐍𝐨𝐝𝐞 𝐕𝐢𝐝𝐞𝐨 𝐏𝐫𝐨</h2>
                     <p class="card-description">𝐕𝐢𝐝𝐞𝐨 𝐄𝐝𝐢𝐭𝐨𝐫𝐥𝐚𝐫 𝐔𝐜𝐡𝐮𝐧 𝐌𝐚𝐱𝐬𝐮𝐬 𝐈𝐥𝐨𝐯𝐚. 𝐕𝐢𝐝𝐞𝐨 𝐅𝐨𝐫𝐦𝐚𝐭 𝟒𝐊 𝐅𝐇𝐃, 𝟏𝟐𝟎 𝐅𝐏𝐒. 𝐈𝐥𝐨𝐯𝐚 𝐀𝐧𝐝𝐫𝐨𝐢𝐝 𝐕𝐞𝐫𝐬𝐢𝐲𝐚 𝐔𝐜𝐡𝐮𝐧.</p>
-                    <a href="https://download1638.mediafire.com/mk1ih7o8lotgYoC5UzNCB2ik8gDuM4SGBfZjDIuYxk3mlfxjNiDLWcD3VcQQz15loSPno6HZUCBNxK0rqWIbSFZfjoMupfVxRfA2WtqsmgxdYbYKJLxARr_6NvEzgwejEHhE29KpB6subV4-bcpTlbEl9qxoujNmz7IFPBmU/kv81aiovt5y4bcw/Node+Video+by+Colin.apk" class="download-btn"><i class="fas fa-download"></i> Yuklab olish</a>
+                    <a href="https://download1638.mediafire.com/a6zpndhxcsugtxxv_trZJFgux4eF363OXG0kqOvLeOE-fzNeLTUaP0I8uKNQJM63CpLTFPGRCwQUpZU546dnsUTaju0iZQs6IEAVII6IoeGJXh4023K0PsuaxxxzEzw7BIVI13ttCwhMj67l94qh8WGCvHlIrmB4PKV8XsHuaorj/kv81aiovt5y4bcw/Node+Video+by+Colin.apk" class="download-btn"><i class="fas fa-download"></i> Yuklab olish</a>
                 </div>
             </div>
 
@@ -76,17 +96,6 @@
                 </div>
             </div>
 
-            <!--6 Card Qism-->
-            <div class="card">
-                <div class="image-container">
-                    <img src="img/back1.jpg" alt="Digital Marketing" class="card-image">
-                </div>
-                <div class="card-content">
-                    <h2 class="card-title">𝐂𝐨𝐥𝐢𝐧𝐔𝐳𝐛 𝐖𝐞𝐛</h2>
-                    <p class="card-description">𝐃𝐚𝐬𝐭𝐮𝐫𝐥𝐚𝐬𝐡𝐠𝐚 𝐃𝐨𝐢𝐫 𝐌𝐚𝐳𝐯𝐮. 𝐇𝐭𝐦𝐥, 𝐂𝐬𝐬, 𝐏𝐲𝐭𝐡𝐨𝐧, 𝐉𝐚𝐯𝐚𝐒𝐜𝐫𝐢𝐩𝐭, 𝐓𝐲𝐩𝐞𝐒𝐜𝐫𝐢𝐩𝐭, 𝐍𝐨𝐝𝐞 𝐉𝐬 𝐕𝐚 ........ .</p>
-                    <a href="https://t.me/colinuzb" class="download-btn"><i class="fas fa-download"></i> Yuklab olish</a>
-                </div>
-            </div>
         </div>
 
         <footer>
