--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         </label>
 
         <nav class="navbar">
-          <a href="index.html" style="--i:0;">𝐆𝐚𝐦𝐞𝐬</a>
-          <a href="index.html" style="--i:1;">𝐓𝐞𝐚𝐦</a>
-          <a href="index.html" style="--i:4;">𝐋𝐨𝐠𝐢𝐧</a>
+          <a href="page/game.html" style="--i:0;">𝐆𝐚𝐦𝐞𝐬</a>
+          <a href="page/team.html" style="--i:1;">𝐓𝐞𝐚𝐦</a>
+          <a href="page/login.html" style="--i:4;">𝐋𝐨𝐠𝐢𝐧</a>
 
         </nav>
 
@@ -56,7 +56,7 @@
                 <div class="card-content">
                     <h2 class="card-title">𝐀𝐟𝐭𝐞𝐫 𝐌𝐨𝐭𝐢𝐨𝐧 𝐕𝐳𝐥𝐨𝐦</h2>
                     <p class="card-description">𝐀𝐟𝐭𝐞𝐫 𝐌𝐨𝐭𝐢𝐨𝐧 𝐈𝐥𝐨𝐯𝐚𝐬𝐢 𝟖𝐊 𝐔𝐇𝐃, 𝟏𝟐𝟎 𝐅𝐏𝐒 𝐕𝐢𝐝𝐞𝐨 𝐘𝐚𝐬𝐚𝐬𝐡 𝐔𝐜𝐡𝐮𝐧 𝐕𝐚 𝐀𝐧𝐝𝐫𝐨𝐢𝐝 𝐕𝐞𝐫𝐬𝐢𝐲𝐚𝐝𝐚 𝐈𝐬𝐡𝐥𝐚𝐲𝐝𝐢. 𝟗𝟗𝟗+ 𝐃𝐚𝐧 𝐊𝐨❜𝐩 𝐄𝐟𝐟𝐞𝐜𝐭 𝐕𝐚 𝐀𝐧𝐢𝐦𝐚𝐭𝐢𝐨𝐧𝐥𝐚𝐫.</p>
-                    <a href="download/Alight Motion Vzlom By Colin.apk" class="download-btn"><i class="fas fa-download"></i> Yuklab olish</a>
+                    <a href="https://download2391.mediafire.com/g20n6d4c9y9gS1lzIc1puAIVqUOwH_WU6XHmQMsZSMWgdDt7ZuMz_rAKoBTWv_Phgt8_Sel9eIjGDwBG6DzI9gAPrUWuEgqQdTjXb0fbXN2rwdSiAnxZn-EZ9LmPuD8KP7k7IuCDT64LOnwsFAbJzTRWkm1Gry9GAo35cBplPsPC/p7lrpkwufwllkpk/Alight+Motion+Vzlom+By+Colin.apk" class="download-btn"><i class="fas fa-download"></i> Yuklab olish</a>
                 </div>
             </div>
 
@@ -68,14 +68,14 @@
                 <div class="card-content">
                     <h2 class="card-title">𝐏𝐡𝐨𝐭𝐨𝐒𝐡𝐨𝐩 𝐏𝐫𝐨</h2>
                     <p class="card-description">𝐏𝐡𝐨𝐭𝐨𝐒𝐡𝐨𝐩 𝐏𝐫𝐨 𝐃𝐚𝐬𝐭𝐮𝐫𝐢 𝐘𝐨𝐮𝐓𝐮𝐛𝐞𝐫𝐥𝐚𝐫 𝐔𝐜𝐡𝐮𝐧 𝐓𝐡𝐮𝐦𝐛𝐧𝐚𝐢𝐥 𝐘𝐚𝐬𝐚𝐬𝐡𝐝𝐚 𝐘𝐨𝐫𝐝𝐚𝐦 𝐁𝐞𝐫𝐚𝐝𝐢. 𝟏𝟎𝟎 𝐃𝐚𝐧 𝐎𝐫𝐭𝐢𝐪 𝐄𝐟𝐟𝐞𝐜𝐭𝐥𝐚𝐫 𝐌𝐚𝐯𝐣𝐮𝐝. 𝐀𝐧𝐝𝐫𝐨𝐢𝐝 𝐕𝐞𝐫𝐬𝐢𝐲𝐚 𝐔𝐜𝐡𝐮𝐧.</p>
-                    <a href="download/Ps CC 2019 by Colin.apk" class="download-btn"><i class="fas fa-download"></i> Yuklab olish</a>
+                    <a href="https://download2268.mediafire.com/t3va3nxmu3cgcY46kktL24aPWcRJfK5bCJcUrcGhaGLR9gBn1rtjC7UCpyu0SMqbuvQs33GDQCreuxgqJvuR2U9_nmc6bicapX6ar0o9dm3aH-NYoAwqJhNNeN2Tl5aoNj6LC8h-zeo1BEijXcdpzT6uYbJtF44mv6xGZ67VyS4E/s4w4z1h3h5o9sg7/Ps+CC+2019+by+Colin.apk" class="download-btn"><i class="fas fa-download"></i> Yuklab olish</a>
                 </div>
             </div>
 
             <!--4 Card Qism-->
             <div class="card">
                 <div class="image-container">
-                    <img src="img/back2.jpg" alt="Data Science" class="card-image">
+                    <img src="img/background.jpg" alt="Data Science" class="card-image">
                 </div>
                 <div class="card-content">
                     <h2 class="card-title">𝐂𝐨𝐥𝐢𝐧𝐔𝐳𝐛 𝐖𝐞𝐛</h2>
@@ -87,7 +87,7 @@
             <!--5 Card Qism-->
             <div class="card">
                 <div class="image-container">
-                    <img src="img/back.jpg" alt="Graphic Design" class="card-image">
+                    <img src="img/background.jpg" alt="Graphic Design" class="card-image">
                 </div>
                 <div class="card-content">
                     <h2 class="card-title">𝐂𝐨𝐥𝐢𝐧𝐔𝐳𝐛 𝐖𝐞𝐛</h2>
