--- a/index.html
+++ b/index.html
@@ -32,8 +32,22 @@
 
         <header class="header-text">
             <h1>𝐖𝐞𝐛 𝐃𝐚𝐬𝐭𝐮𝐫𝐠𝐚 𝐇𝐮𝐬𝐡 𝐊𝐞𝐥𝐢𝐛𝐬𝐢𝐳.</h1>
-            <p class="subtitle">𝐊𝐞𝐫𝐚𝐤𝐥𝐢 𝐏𝐨𝐜𝐤𝐞𝐭𝐥𝐚𝐫, 𝐎❜𝐲𝐢𝐧 𝐯𝐚 𝐃𝐚𝐬𝐭𝐮𝐫 𝐔𝐜𝐡𝐮𝐧 𝐈𝐥𝐨𝐯𝐚𝐥𝐚𝐫.</p>
+            <p class="subtitle">𝐘𝐚𝐧𝐠𝐢𝐥𝐢𝐤𝐥𝐚𝐫𝐝𝐚𝐧 𝐇𝐚𝐛𝐚𝐫𝐝𝐨𝐫 𝐁𝐨❜𝐥𝐢𝐧𝐠❗</p>
         </header>
+        <div class="cards-container">
+            <!--1 Card Qism-->
+            <div class="card">
+                <div class="image-container">
+                    <img src="img/portfolio.jpg" alt="Web Development" class="card-image">
+                </div>
+                <div class="card-content">
+                    <h2 class="card-title">𝐏𝐨𝐫𝐭𝐟𝐨𝐥𝐢𝐨</h2>
+                    <p class="card-description">𝐃𝐚𝐬𝐭𝐮𝐫 𝐇𝐚𝐪𝐢𝐝𝐚 𝐐𝐢𝐬𝐪𝐚𝐜𝐡𝐚 𝐌𝐚𝐥𝐮𝐦𝐨𝐭𝐥𝐚𝐫.</p>
+                    <a href="portfolio/index.html" class="download-btn"><i class="far fa-folder""></i> 𝐊𝐢𝐫𝐢𝐬𝐡</a>
+                </div>
+            </div>
+          </div>
+
 
 
         <footer>
