--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="card-content">
                     <h2 class="card-title">𝐏𝐨𝐫𝐭𝐟𝐨𝐥𝐢𝐨</h2>
                     <p class="card-description">𝐃𝐚𝐬𝐭𝐮𝐫 𝐇𝐚𝐪𝐢𝐝𝐚 𝐐𝐢𝐬𝐪𝐚𝐜𝐡𝐚 𝐌𝐚𝐥𝐮𝐦𝐨𝐭𝐥𝐚𝐫.</p>
-                    <a href="portfolio/index.html" class="download-btn"><i class="far fa-folder""></i> 𝐊𝐢𝐫𝐢𝐬𝐡</a>
+                    <a href="portfolio/index.html" class="download-btn"><i class="far fa-folder"></i> 𝐊𝐢𝐫𝐢𝐬𝐡</a>
                 </div>
             </div>
           </div>
