--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <nav class="navbar">
           <a href="page/game.html" style="--i:0;">𝐆𝐚𝐦𝐞𝐬</a>
-          <a href="page/team.html" style="--i:1;">𝐓𝐞𝐚𝐦</a>
+          <a href="page/design.html" style="--i:1;">𝐃𝐞𝐬𝐢𝐠𝐧</a>
           <a href="page/login.html" style="--i:4;">𝐋𝐨𝐠𝐢𝐧</a>
 
         </nav>
@@ -35,7 +35,7 @@
             <p class="subtitle">𝐘𝐚𝐧𝐠𝐢𝐥𝐢𝐤𝐥𝐚𝐫𝐝𝐚𝐧 𝐇𝐚𝐛𝐚𝐫𝐝𝐨𝐫 𝐁𝐨❜𝐥𝐢𝐧𝐠❗</p>
         </header>
         <div class="cards-container">
-            <!--1 Card Qism-->
+            <!--1 Portfolio Card Qism-->
             <div class="card">
                 <div class="image-container">
                     <img src="img/portfolio.jpg" alt="Web Development" class="card-image">
